@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.kivakit.ui.swing.component.panel.stack"
    
    JPanel <|-- CardPanel
    class CardPanel
    {
        --(constructors)--
        +CardPanel()
        --
        +void show(String name)
        --(collection)--
        +void addCard(JComponent card, String name)
        +void first()
        +void last()
        --(iteration)--
        +void next()
    }
    
    JPanel <|-- FlashCardPanel
    class FlashCardPanel
    {
        --(constructors)--
        +FlashCardPanel()
        --(lifecycle)--
        +void start(Duration delay)
    }
    
@enduml

